Correction de contraste de couleurs pour des couleurs génériques

--- a/module/color/variable/_sets.scss
+++ b/module/color/variable/_sets.scss
@@ -26,7 +26,7 @@ $values: (
   ),
   primary: (
     village-primary: (
-      strong: village-primary-sun village-primary-625,
+      strong: village-primary-sun village-primary-moon,
       softest: village-primary-850 village-primary-200,
       light: village-primary-925 village-primary-125,
       lighter: village-primary-950 village-primary-100,
@@ -35,7 +35,7 @@ $values: (
       inverted: village-primary-975 village-primary-sun,
     ),
     village-secondary: (
-      strong: village-secondary-sun village-secondary-625,
+      strong: village-secondary-sun village-secondary-moon,
       softest: village-secondary-850 village-secondary-200,
       light: village-secondary-925 village-secondary-125,
       lighter: village-secondary-950 village-secondary-100,
